<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bearing Finder</string>
    <string name="action_settings">Settings</string>

    <string name="BearingPicture">BearingPicture</string>
    <string name="bearingpicture">BearingPicture</string>
    <string name="outterDiamterText">O/D</string>
    <string name="widthText">Width</string>
    <string name="innerdiameterText">I/D</string>
    <string name="bearing_numberText">Bearing Number</string>
    <string name="splashTextArthor">Programmed by T.Shemwell</string>
    <string name="splashTextProgramName">Bearing Finder V1</string>
    <string name="splashTextSoftwareName1">Working Penguin</string>
    <string name="splashTextSoftwareName2">Software</string>
    <string name="checkBox1inSettingsActivity">New CheckBox</string>
    <string name="BearingNum">Bearing #</string>
    <string name="IDSize">I/D Size</string>
    <string name="ODSize">O/D Size</string>
    <string name="Type">Type</string>
    <string name="ImageNum">Image #</string>
    <string name="Location">Location</string>
    <string name="Next">Next ]</string>
    <string name="Prev">[ Prev</string>
    <string name="Edit">Edit</string>
    <string name="Update">Update</string>
    <string name="Zeros">000</string>
    <string name="Search">Search</string>
    <string name="ID">I/D</string>
    <string name="OD">O/D</string>
    <string name="W">W</string>
    <string name="First">[[</string>
    <string name="Last">]]</string>
    <string name="record">Record number</string>
    <string name="commentsText">Comments</string>
    <string name="EditingNewEntry">" Editing New Entry"</string>
    <string name="FindBearingNumber">Find Bearing Number</string>
    <string name="SetToZero">Set To Zero</string>
    <string name="AddEntry">Add Entry</string>
    <string name="SaveEntry">Save Entry</string>
    <string name="DeleteEntry">Delete Entry</string>
    <string name="CancelEntry">Cancel Entry</string>
    <string name="NonFound">None Found</string>
    <string name="BearingNumber">Bearing number</string>
    <string name="HintType">Type ID in mm</string>
    <string name="HintTypeOD">Type OD in mm</string>
    <string name="HintWidth">Width in mm</string>
    <string name="HintBearingType">zz z rs</string>
    <string name="HintDefault">0 default</string>
    <string name="HintLocation">Type Location Stored</string>
    <string name="HintComments">Comments Entered Here</string>
    <string name="ContentFirstButton">buttonfirst</string>
    <string name="ContentPrevButton">Prevbutton</string>
    <string name="ContentLastButton">button last</string>
    <string name="ContentNextButton">button next</string>
    <string name="Record">Record 1 of 1</string>
    <string name="MenuEdit">Edit</string>
    <string name="MenuAbout">About</string>
    <string name="MenuSearch">Search</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
</resources>