<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.work.tommy.bearing_android_app.main_activity">
    <item
        android:id="@+id/MenuitemEdit"
        android:title="@string/MenuEdit"
        android:visible="true"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_edit"/>

    <item
        android:id="@+id/MenuitemAbout"
        android:title="@string/MenuAbout"
        android:visible="true"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_info_details"/>

    <item
        android:id="@+id/MenuitemSearch"
        android:title="@string/MenuSearch"
        android:visible="true"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_search"/>


</menu>


