<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="0.5"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BearingNum"
                android:id="@+id/textViewBearing"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextBearingNum"
                android:paddingLeft="7dp"
                android:paddingTop="7dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IDSize"
                android:id="@+id/textViewID"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextID"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ODSize"
                android:id="@+id/textViewOD"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextOD"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widthText"
                android:id="@+id/textViewWidth"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextWidth"
                tools:ignore="RtlHardcoded,RtlSymmetry" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Type"
                android:id="@+id/textViewType"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextType"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImageNum"
                android:id="@+id/textViewImageNum"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextImageNum"
                android:paddingLeft="7dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:id="@+id/textViewLocation"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextLocation"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentsText"
                android:id="@+id/textViewComments"
                android:typeface="serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignBaseline="@+id/editTextComments"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextBearingNum"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:focusable="false"
                android:hint="@string/BearingNumber"
                android:textColorHint="#346ac8"
                android:inputType="text"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                tools:ignore="RtlHardcoded" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextID"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:inputType="number"
                android:focusable="false"
                android:hint="@string/HintType"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextBearingNum"
                android:paddingTop="7dp"
                tools:ignore="RtlHardcoded" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextOD"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:inputType="number"
                android:hint="@string/HintTypeOD"
                android:focusable="false"
                android:editable="false"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextID"
                tools:ignore="Deprecated,RtlHardcoded" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextWidth"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:inputType="number"
                android:focusable="false"
                android:hint="@string/HintWidth"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextOD"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextType"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:inputType="text"
                android:focusable="false"
                android:hint="@string/HintBearingType"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextWidth"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextImageNum"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:inputType="number"
                android:focusable="false"
                android:hint="@string/HintDefault"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextType"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLocation"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:focusable="false"
                android:inputType="text"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextImageNum"
                android:hint="@string/HintLocation"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextComments"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#322683"
                android:textStyle="bold"
                android:focusable="false"
                android:inputType="text"
                android:textColorHint="#346ac8"
                android:layout_alignLeft="@+id/editTextBearingNum"
                android:layout_below="@+id/editTextLocation"
                android:hint="@string/HintComments"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </ScrollView>


    <!-- NavBar Layout below - 4 buttons and text view for the record number -->
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/linearLayoutNavBar"
        android:gravity="bottom"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="false"
        android:background="#010101"
        tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="onClickFirstRecord"
            android:id="@+id/btnFirst"
            android:src="@drawable/btn_first"
            android:contentDescription="@string/ContentFirstButton"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrev"
            android:onClick="onClickPrevRecord"
            android:layout_toRightOf="@+id/btnFirst"
            android:src="@drawable/prev"
            android:contentDescription="@string/ContentPrevButton"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLast"
            android:onClick="onClickLastRecord"
            android:src="@drawable/btn_last"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btnFirst"
            android:contentDescription="@string/ContentLastButton"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            android:onClick="onClickNextRecord"
            android:src="@drawable/next"
            android:layout_toLeftOf="@+id/btnLast"
            android:contentDescription="@string/ContentNextButton"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RecordValues"
            android:typeface="serif"
            android:textSize="20sp"

            android:text="@string/Record"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="#e40716"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="66dp"/>


    </RelativeLayout>

</LinearLayout>


