<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:focusable="true"
    android:clickable="false">

    <ImageView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"

        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashTextArthor"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#e5696c"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashTextProgramName"
        android:id="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="#3134e5"
        android:textStyle="normal"
        android:textSize="30dp"
        android:shadowColor="#a0dce5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashTextSoftwareName2"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView"
        android:textSize="30dp"
        android:textColor="#5ece3c"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashTextSoftwareName1"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView2"
        android:textSize="30dp"
        android:textColor="#5ece3c"
        android:textStyle="bold"/>


</RelativeLayout>